--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Melody</string>
     <string name="song_name">Song Name</string>
+    <string name="song_name">Song Name</string>
+    <string name="_0_10">0:10</string>
+    <string name="_4_10">4:10</string>
 </resources>
